Update MinMax.java
Since Java 21, using List.getFirst intead of List.get(0).