@@ -5,7 +5,7 @@ import java.util.List;
 
 public class MinMax {
     public static <T> T max(List<T> list, Comparator<? super T> cmp) {
-        T candidate = list.get(0);
+        T candidate = list.getFirst();
         for (T next : list) {
             if (cmp.compare(candidate, next) < 0) {
                 candidate = next;
@@ -15,7 +15,7 @@ public class MinMax {
     }
 
     public static <T> T min(List<T> list, Comparator<? super T> cmp) {
-        T candidate = list.get(0);
+        T candidate = list.getFirst();
         for (T next : list) {
             if (cmp.compare(candidate, next) > 0) {
                 candidate = next;
